added new color

--- a/story.html
+++ b/story.html
@@ -21,7 +21,7 @@
       width:100%;
     }
     .background {
-      background-color: #563D7C;
+      background-color: #5e3e8e;
     }
 
     .navbar-brand {
