Added console log

--- a/story.html
+++ b/story.html
@@ -256,7 +256,7 @@ $(".alert-box").click(function()
 })
 
 
-console.log("Hi Nisha is here");
+console.log("Hi Nisha is everywhere");
 
 
   </script>
