added two lines

--- a/story.html
+++ b/story.html
@@ -259,6 +259,8 @@ $(".alert-box").click(function()
 console.log("Hi Nisha is everywhere");
 console.log("Hi Nisha");
 console.log("Hi Callbackhell is everywhere");
+console.log("Hi Callbackhell is nowhere");
+console.log("Hi Callbackhell is hehehe");
 
 
   </script>
