--- a/story.html
+++ b/story.html
@@ -1,268 +1,305 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-
-<head>
-  <meta charset="utf-8">
-  <link rel="shortcut icon" type="image/x-icon" href="C:/Users/DELL/Downloads/My Post (1).png" />
-  <title>ShtorY</title>
-  <script src="https://use.fontawesome.com/d1ef7c8758.js"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;900&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet">
-
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-  <style>
-    body {
-      font-family: 'Montserrat', sans-serif;
-    }
-    .navbar
-    {
-      position:fixed;
-      top:0;
-      width:100%;
-    }
-    .background {
-      background-color: #563D7C;
-    }
-
-    .navbar-brand {
-      font-family: 'Ubuntu';
-      font-weight: 700;
-      font-size: 2.5rem;
-    }
-
-    .nav-item {
-      padding: 0 18px;
-    }
-
-    .nav-link {
-      font-size: 1.2rem;
-
-    }
-
-    .container-fluid {
-      padding: 3% 15%;
-      margin-top: 150px;
-
-    }
-
-    .center {
-      text-align: center;
-    }
-
-    h1 {
-      font-family: 'Ubuntu';
-      font-weight: 700;
-      font-size: 3.5rem;
-      color: #563D7C;
-    }
-
-    .button {
-      margin: 5% 3% 5% 0;
-      background-color: #563D7C;
-    }
-
-    .button:hover {
-      background-color: #563D7C;
-    }
-
-    .text-color {
-      color: #563D7C;
-    }
-
-    .color {
-      background-color: #ede5f9;
-    }
-    .last
-    {
-      margin-top:80px;
-    }
-    .logo
-    {
-      color : #fff;
-    }
-.fa-3x:hover
-{
-  color:#fff;
-}
-
-  </style>
-
-</head>
-
-<body>
-
-<!--first section-->
-
-  <section id="title">
-
-    <nav class="navbar navbar-expand-md navbar-dark background  ">
-      <a class="navbar-brand " href="">ShtorY</a>
-
-      <!--toggel button-->
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-      </button>
-
-
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-
-      <ul class="navbar-nav ">
-
-          <li class="nav-item"> <a class="nav-link" href="">Profile</a> </li>
-          <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" href="" id="navbarDropdownMenuLink" data-toggle="dropdown">Browse</a>
-          <div class="dropdown-menu  " aria-labelledby="navbarDropdownMenuLink">
-
-              <a class="dropdown-item alert-box" href="#">Paid SStories</a>
-              <a class="dropdown-item alert-box" href="#">Adventure</a>
-
-              <a class="dropdown-item alert-box" href="#">Fanfiction</a>
-              <a class="dropdown-item alert-box" href="#">Romance</a>
-
-
-              <a class="dropdown-item alert-box" href="#">Horror</a>
-              <a class="dropdown-item alert-box" href="#">Mystery</a>
-
-              <a class="dropdown-item alert-box" href="#">Poetry</a>
-          </div>
-          </li>
-
-          <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" href="" id="navbarDropdownMenuLink" data-toggle="dropdown">Language</a>
-          <div class="dropdown-menu  " aria-labelledby="navbarDropdownMenuLink">
-
-              <a class="dropdown-item alert-box" href="#">English</a>
-              <a class="dropdown-item alert-box" href="#">Hindi</a>
-          </div>
-
-          </li>
-
-          <form class="form-inline my-lg-0">
-            <input class="form-control " size="50" type="search" placeholder="Search"  />
-
-          </form>
-        </ul>
-
-        <ul class="navbar-nav ml-auto">
-
-          <li class="nav-item alert-box"> <a class="nav-link" href="">Log in </a></li>
-          <li class="nav-item alert-box"><a class="nav-link" href=""> Sign up </a></li>
-        </ul>
-      </div>
-    </nav>
-
-  </section>
-
-
-  <!--middle section-->
-
-  <div class="container-fluid color center">
-
-    <h1>Welcome to ShtorY !!!</h1>
-
-    <h2 class="text-color">Too lazy to read novel ? wanna try Short Stories ?</h2>
-    <h2 class="text-color">let's get Started</h2>
-
-
-
-    <button type="button" class="btn btn-lg btn-dark button"><i class="fa fa-book" aria-hidden="true"></i> start Reading </button>
-    <button type="button" class="btn btn-lg btn-dark button"><i class="fa fa-pencil" aria-hidden="true"></i> start Writing</button>
-
-    <br /><p class="text-color">Happy Reading!</p>
-  </div>
-
-
-
-  <!--last section-->
-  <section class="background last">
-
-  <footer class="page-footer pt-4 ">
-
-
-    <div class="container-fluid text-center text-md-left">
-
-
-      <div class="row">
-
-
-        <div class="col-lg-4">
-
-
-          <h1 class="logo">ShtorY</h1>
-
-        </div>
-
-        <div class="col-lg-4 logo">
-
-
-          <h2  >About Us</h2>
-
-          <h5>ShtorY© 2020 is a social short storytelling platform where you can read as well as write
-          short stories.</h5>
-
-          <h5>Users can connect to community of readers and writers globally. </h5>
-
-
-        </div>
-
-        <div class="col-lg-4 logo">
-
-
-          <h2  >Follow Us</h2>
-
-          <div class= "row">
-            <div class="col">
-            <a class="logo" href="https://www.facebook.com/" target="_blank">  <i class="fa fa-facebook-square fa-3x" aria-hidden="true"></i></a>
+  <head>
+    <meta charset="utf-8" />
+    <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="C:/Users/DELL/Downloads/My Post (1).png"
+    />
+    <title>ShtorY</title>
+    <script src="https://use.fontawesome.com/d1ef7c8758.js"></script>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap"
+      rel="stylesheet"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+      integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
+      crossorigin="anonymous"
+    />
+    <style>
+      body {
+        font-family: "Montserrat", sans-serif;
+      }
+      .navbar {
+        position: fixed;
+        top: 0;
+        width: 100%;
+      }
+      .background {
+        background-color: #563d7c;
+      }
+
+      .navbar-brand {
+        font-family: "Ubuntu";
+        font-weight: 700;
+        font-size: 2.5rem;
+      }
+
+      .nav-item {
+        padding: 0 18px;
+      }
+
+      .nav-link {
+        font-size: 1.2rem;
+      }
+
+      .container-fluid {
+        padding: 3% 15%;
+        margin-top: 150px;
+      }
+
+      .center {
+        text-align: center;
+      }
+
+      h1 {
+        font-family: "Ubuntu";
+        font-weight: 700;
+        font-size: 3.5rem;
+        color: #563d7c;
+      }
+
+      .button {
+        margin: 5% 3% 5% 0;
+        background-color: #563d7c;
+      }
+
+      .button:hover {
+        background-color: #563d7c;
+      }
+
+      .text-color {
+        color: #563d7c;
+      }
+
+      .color {
+        background-color: #ede5f9;
+      }
+      .last {
+        margin-top: 80px;
+      }
+      .logo {
+        color: #fff;
+      }
+      .fa-3x:hover {
+        color: #fff;
+      }
+    </style>
+  </head>
+
+  <body>
+    <!--first section-->
+
+    <section id="title">
+      <nav class="navbar navbar-expand-md navbar-dark background">
+        <a class="navbar-brand" href="">ShtorY</a>
+
+        <!--toggel button-->
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav">
+            <li class="nav-item"><a class="nav-link" href="">Profile</a></li>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href=""
+                id="navbarDropdownMenuLink"
+                data-toggle="dropdown"
+                >Browse</a
+              >
+              <div
+                class="dropdown-menu"
+                aria-labelledby="navbarDropdownMenuLink"
+              >
+                <a class="dropdown-item alert-box" href="#">Paid SStories</a>
+                <a class="dropdown-item alert-box" href="#">Adventure</a>
+
+                <a class="dropdown-item alert-box" href="#">Fanfiction</a>
+                <a class="dropdown-item alert-box" href="#">Romance</a>
+
+                <a class="dropdown-item alert-box" href="#">Horror</a>
+                <a class="dropdown-item alert-box" href="#">Mystery</a>
+
+                <a class="dropdown-item alert-box" href="#">Poetry</a>
               </div>
-              <div class="col">
-            <a class="logo" href="https://www.instagram.com/accounts/login/?hl=en" target="_blank">  <i class="fa fa-instagram fa-3x" aria-hidden="true"></i></a>
-                </div>
-                <div class="col">
-            <a class="logo" href="https://twitter.com/login?lang=en" target="_blank">    <i class="fa fa-twitter fa-3x" aria-hidden="true"></i></a>
-                  </div>
-                  <div class="col">
-              <a class="logo" href="https://www.youtube.com/" target="_blank">    <i class="fa fa-youtube-play fa-3x" aria-hidden="true"></i></a>
-                    </div>
-            </div>
+            </li>
 
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href=""
+                id="navbarDropdownMenuLink"
+                data-toggle="dropdown"
+                >Language</a
+              >
+              <div
+                class="dropdown-menu"
+                aria-labelledby="navbarDropdownMenuLink"
+              >
+                <a class="dropdown-item alert-box" href="#">English</a>
+                <a class="dropdown-item alert-box" href="#">Hindi</a>
+              </div>
+            </li>
 
-   </div>
+            <form class="form-inline my-lg-0">
+              <input
+                class="form-control"
+                size="50"
+                type="search"
+                placeholder="Search"
+              />
+            </form>
+          </ul>
 
- </div>
-
-
-</div>
-
-
-<div class="text-center  py-3 logo">© 2020 ShtorY</div>
-
-
-</footer>
-
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item alert-box">
+              <a class="nav-link" href="">Log in </a>
+            </li>
+            <li class="nav-item alert-box">
+              <a class="nav-link" href=""> Sign up </a>
+            </li>
+          </ul>
+        </div>
+      </nav>
     </section>
 
+    <!--middle section-->
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+    <div class="container-fluid color center">
+      <h1>Welcome to ShtorY !!!</h1>
 
-  <script>
+      <h2 class="text-color">
+        Too lazy to read novel ? wanna try Short Stories ?
+      </h2>
+      <h2 class="text-color">let's get Started</h2>
 
- $(".button").click(function()
-{
-  alert("this page soon be availbale !!!");
-})
-$(".alert-box").click(function()
-{
-  alert("We are still working on this. Sorry for your inconvience.");
-})
+      <button type="button" class="btn btn-lg btn-dark button">
+        <i class="fa fa-book" aria-hidden="true"></i> start Reading
+      </button>
+      <button type="button" class="btn btn-lg btn-dark button">
+        <i class="fa fa-pencil" aria-hidden="true"></i> start Writing
+      </button>
 
+      <br />
+      <p class="text-color">Happy Reading!</p>
+    </div>
 
-console.log("Hi Nisha is everywhere");
-console.log("Hi Nisha");
-console.log("Hi Callbackhell is everywhere");
-console.log("Hi Callbackhell is nowhere");
-console.log("Hi Callbackhell is hehehe");
+    <!--last section-->
+    <section class="background last">
+      <footer class="page-footer pt-4">
+        <div class="container-fluid text-center text-md-left">
+          <div class="row">
+            <div class="col-lg-4">
+              <h1 class="logo">ShtorY</h1>
+            </div>
 
+            <div class="col-lg-4 logo">
+              <h2>About Us</h2>
 
-  </script>
+              <h5>
+                ShtorY© 2020 is a social short storytelling platform where you
+                can read as well as write short stories.
+              </h5>
+
+              <h5>
+                Users can connect to community of readers and writers globally.
+              </h5>
+            </div>
+
+            <div class="col-lg-4 logo">
+              <h2>Follow Us</h2>
+
+              <div class="row">
+                <div class="col">
+                  <a
+                    class="logo"
+                    href="https://www.facebook.com/"
+                    target="_blank"
+                  >
+                    <i
+                      class="fa fa-facebook-square fa-3x"
+                      aria-hidden="true"
+                    ></i
+                  ></a>
+                </div>
+                <div class="col">
+                  <a
+                    class="logo"
+                    href="https://www.instagram.com/accounts/login/?hl=en"
+                    target="_blank"
+                  >
+                    <i class="fa fa-instagram fa-3x" aria-hidden="true"></i
+                  ></a>
+                </div>
+                <div class="col">
+                  <a
+                    class="logo"
+                    href="https://twitter.com/login?lang=en"
+                    target="_blank"
+                  >
+                    <i class="fa fa-twitter fa-3x" aria-hidden="true"></i
+                  ></a>
+                </div>
+                <div class="col">
+                  <a
+                    class="logo"
+                    href="https://www.youtube.com/"
+                    target="_blank"
+                  >
+                    <i class="fa fa-youtube-play fa-3x" aria-hidden="true"></i
+                  ></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="text-center py-3 logo">© 2020 ShtorY</div>
+      </footer>
+    </section>
+
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+      integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+      crossorigin="anonymous"
+    ></script>
+
+    <script>
+      $(".button").click(function () {
+        alert("this page soon be availbale !!!");
+      });
+      $(".alert-box").click(function () {
+        alert("We are still working on this. Sorry for your inconvience.");
+      });
+    </script>
   </body>
 </html>
